agrego carpeta multimedia

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="shortcut icon" href="LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
 
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="./index.html"> <img src="/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
+            <a class="navbar-brand" href="./index.html"> <img src="../multimedia/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -38,7 +38,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
                     </li><li class="nav-item">
-                        <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +46,7 @@
     </header>
     <main class="principal">
         <h1>The<span>Tiki</span>Toys</h1>
-        <img src="f11.jpg" alt="TikiToys">
+        <img src="../multimedia/f11.jpg" alt="TikiToys">
         <p class="pInicio">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci maiores harum cumque, omnis voluptates
             iusto ratione iure modi magnam alias, atque, repellendus recusandae accusantium enim amet neque at molestiae
