--- a/novedades/novedades.html
+++ b/novedades/novedades.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/estilos.css">
-    <link rel="shortcut icon" href="/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
 <body class="grilla">
     <header class="contenedor">
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="../index.html"> <img src="/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
+            <a class="navbar-brand" href="../index.html"> <img src="../multimedia/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -30,12 +30,12 @@
                         <a class="nav-link" href="../productos/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./novedades/novedades.html">Novedades</a>
+                        <a class="nav-link" href="../novedades/novedades.html">Novedades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
                     </li><li class="nav-item">
-                        <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
     <main class="principal">
         <h1>The<span>Tiki</span>Toys</h1>
         <h2>Novedades</h2>
-        <video src="/video.mp4" controls></video>
+        <video src="/multimedia/video.mp4" controls></video>
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse recusandae, omnis neque optio unde quia nam labore quae veritatis voluptate rerum maiores deserunt, adipisci ipsa doloribus libero mollitia. Unde in aliquid veniam quia quae aut iste delectus cumque dolores harum distinctio at vitae error ut quas minus, dolorem id atque minima doloribus iure! Nam quas obcaecati nihil dicta eum voluptatibus ratione repellendus eveniet quos assumenda modi aspernatur, provident beatae perspiciatis natus voluptate illum deleniti non ipsum? Soluta quos quaerat exercitationem!
         </p>
