--- a/productos/productos.html
+++ b/productos/productos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/estilos.css">
-    <link rel="shortcut icon" href="/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
 
@@ -16,7 +16,7 @@
     <header class="contenedor">
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="../index.html"> <img src="/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
+            <a class="navbar-brand" href="../index.html"> <img src="../multimedia/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./productos/productos.html">Productos</a>
+                        <a class="nav-link" href="../productos/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../novedades/novedades.html">Novedades</a>
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
         <section class="container">
             <div class="row">
                 <div class="nleft col-sm-6">
-                    <img src="/producto1.jpeg" alt="producto1">
+                    <img src="/multimedia/producto1.jpeg" alt="producto1">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam maxime repudiandae hic dicta
                         veniam aperiam quo, reprehenderit nobis voluptates autem velit odio voluptatem quam, incidunt
@@ -59,7 +59,7 @@
                         molestiae
                         nobis alias sed voluptates aut earum, nisi, voluptatem repudiandae vero. Illum, eligendi totam?
                     </p>
-                    <img src="/producto.jpeg" alt="producto3">
+                    <img src="/multimedia/producto.jpeg" alt="producto3">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, fuga at enim reiciendis
                         ratione
@@ -72,7 +72,7 @@
                     </p>
                 </div>
                 <div class="nright col-sm-6">
-                    <img src="/INSTAGRAM 1.jpg" alt="producto2">
+                    <img src="/multimedia/INSTAGRAM 1.jpg" alt="producto2">
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet vitae nam. Natus deserunt
                         modi
@@ -82,7 +82,7 @@
                         aliquid odit
                         quis placeat officiis delectus? Fugit!
                     </p>
-                    <img src="/producto2.jpeg" alt="producto4">
+                    <img src="/multimedia/producto2.jpeg" alt="producto4">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, voluptatem facere corrupti
                         consectetur
