--- a/contactos/contacto.html
+++ b/contactos/contacto.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/estilos.css">
-    <link rel="shortcut icon" href="/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
 <body class="grilla">
     <header class="contenedor">
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="../index.html"> <img src="/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
+            <a class="navbar-brand" href="../index.html"> <img src="../multimedia/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -35,7 +35,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
                     </li><li class="nav-item">
-                        <a class="nav-link" href="./contacto/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -66,8 +66,6 @@
         <p>
             Copyright- TikiToys
         </p>
-
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
