--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="/estilos.css">
-    <link rel="shortcut icon" href="/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
 
@@ -16,7 +16,7 @@
     <header class="contenedor">
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="../index.html"> <img src="/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
+            <a class="navbar-brand" href="../index.html"> <img src="../multimedia/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
             
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -36,10 +36,10 @@
                         <a class="nav-link" href="../novedades/novedades.html">Novedades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./nosotros/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../contacto/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -58,13 +58,13 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/Render1.jpg" alt="Nosotros">
+                    <img src="/multimedia/Render1.jpg" alt="Nosotros">
                 </div>
                 <div class="carousel-item">
-                    <img src="/Render0000.jpg" alt="Squidgame">
+                    <img src="/multimedia/Render0000.jpg" alt="Squidgame">
                 </div>
                 <div class="carousel-item">
-                    <img src="/historia_01.jpg" alt="Avatar">
+                    <img src="/multimedia/historia_01.jpg" alt="Avatar">
                 </div>
             </div>
             <!-- Left and right controls -->
