--- a/contactos/contacto.html
+++ b/contactos/contacto.html
@@ -35,7 +35,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
                     </li><li class="nav-item">
-                        <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
+                        <a class="nav-link" href="./contactos/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
