--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="../novedades/novedades.html">Novedades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../nosotros/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="./nosotros/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../contactos/contacto.html">Contacto</a>
@@ -58,13 +58,13 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/multimedia/Render1.jpg" alt="Nosotros">
+                    <img src="../multimedia/Render1.jpg" alt="Nosotros">
                 </div>
                 <div class="carousel-item">
-                    <img src="/multimedia/Render0000.jpg" alt="Squidgame">
+                    <img src="../multimedia/Render0000.jpg" alt="Squidgame">
                 </div>
                 <div class="carousel-item">
-                    <img src="/multimedia/historia_01.jpg" alt="Avatar">
+                    <img src="../multimedia/historia_01.jpg" alt="Avatar">
                 </div>
             </div>
             <!-- Left and right controls -->
