--- a/productos/productos.html
+++ b/productos/productos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">\
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/estilos.css">
+    <link rel="stylesheet" href="../estilos.css">
     <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./productos/productos.html">Productos</a>
+                        <a class="nav-link" href="../productos/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../novedades/novedades.html">Novedades</a>
