--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="grilla">
-    <header>
+    <header class="contenedor">
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
             <a class="navbar-brand" href="./index.html"> <img src="./multimedia/LOGO_FONDO_BLANCO (1).png" alt="TikiToys"></a>
@@ -46,7 +46,7 @@
     </header>
     <main class="principal">
         <h1>The<span>Tiki</span>Toys</h1>
-        <img src="./multimedia/f11.jpg" alt="TikiToys">
+        <img src="./multimedia/f11.jpg" alt="TikiToys" class="img">
         <p class="pInicio">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci maiores harum cumque, omnis voluptates
             iusto ratione iure modi magnam alias, atque, repellendus recusandae accusantium enim amet neque at molestiae
