--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -45,10 +45,10 @@
             </div>
         </nav>
     </header>
-    <main class="main">
-        <h1>The<span>Tiki</span>Toys</h1>
+    <main class="principal">
+        <h1 class="titulo">The<span>Tiki</span>Toys</h1>
         <h2 class="subtitulo">Nosotros</h2>
-        <div id="demo" class="carousel slide col-xs-6" data-ride="carousel">
+        <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
                 <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -75,7 +75,7 @@
                 <span class="carousel-control-next-icon"></span>
             </a>
         </div>
-        <p class="parrafo">
+        <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur ex saepe fuga maiores quasi, est rem
             deserunt voluptatum aliquid vel, consectetur praesentium exercitationem itaque earum quisquam repudiandae.
             Sequi atque magnam, maxime at dolorem dolores velit rerum eligendi est aliquam nobis facilis recusandae
