--- a/productos/productos.html
+++ b/productos/productos.html
@@ -51,7 +51,7 @@
         <section class="container">
             <div class="row">
                 <div class="nleft col-sm-6">
-                    <img src="../multimedia/producto1.jpeg" alt="producto1">
+                    <img src="../multimedia/producto1.jpeg" alt="producto1" class="img">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam maxime repudiandae hic dicta
                         veniam aperiam quo, reprehenderit nobis voluptates autem velit odio voluptatem quam, incidunt
@@ -59,7 +59,7 @@
                         molestiae
                         nobis alias sed voluptates aut earum, nisi, voluptatem repudiandae vero. Illum, eligendi totam?
                     </p>
-                    <img src="../multimedia/producto.jpeg" alt="producto3">
+                    <img src="../multimedia/producto.jpeg" alt="producto3" class="img">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, fuga at enim reiciendis
                         ratione
@@ -72,7 +72,7 @@
                     </p>
                 </div>
                 <div class="nright col-sm-6">
-                    <img src="../multimedia/INSTAGRAM 1.jpg" alt="producto2">
+                    <img src="../multimedia/INSTAGRAM 1.jpg" alt="producto2" class="img">
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet vitae nam. Natus deserunt
                         modi
@@ -82,7 +82,7 @@
                         aliquid odit
                         quis placeat officiis delectus? Fugit!
                     </p>
-                    <img src="../multimedia/producto2.jpeg" alt="producto4">
+                    <img src="../multimedia/producto2.jpeg" alt="producto4" class="img">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, voluptatem facere corrupti
                         consectetur
