--- a/novedades/novedades.html
+++ b/novedades/novedades.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos.css">
+    <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
     <title>TikiToys</title>
 </head>
-<body class="grilla">
+<body>
     <header class="contenedor">
         <nav class="navbar navbar-expand-md navbar-dark">
             <!-- Brand -->
