--- a/novedades/novedades.html
+++ b/novedades/novedades.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <meta name="description" content="TikiToys produccion de muñecos 3D personalizados" />
+    <meta name="keywords" content="TikiToys, Muñecos, 3D, personalizados" />
     <title>TikiToys</title>
 </head>
 <body>
