--- a/productos/productos.html
+++ b/productos/productos.html
@@ -9,6 +9,8 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="shortcut icon" href="../multimedia/LOGO_FONDO_BLANCO (1).png" type="image/x-icon">
+    <meta name="description" content="TikiToys produccion de muñecos 3D personalizados" />
+    <meta name="keywords" content="TikiToys, Muñecos, 3D, personalizados" />
     <title>TikiToys</title>
 </head>
 
